[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/pick_a_dot/Src/Pick-A-Dot.gd" type="Script" id=1]
[ext_resource path="res://addons/pick_a_dot/Picker.png" type="Texture" id=2]
[ext_resource path="res://addons/pick_a_dot/Transparent.png" type="Texture" id=3]
[ext_resource path="res://addons/pick_a_dot/Picker_Pressed.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float hue = 1;

vec3 hsv2rgb(vec3 c)
{
    vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
    vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
    return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
}

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = hsv2rgb(vec3(hue, UV.x, 1.0-UV.y));
}"

[sub_resource type="ShaderMaterial" id=2]
render_priority = 1
shader = SubResource( 1 )
shader_param/hue = 1.0

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

vec3 hsv2rgb(vec3 c)
{
    vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
    vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
    return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
}

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = hsv2rgb(vec3(UV.y, 1, 1));
}"

[sub_resource type="ShaderMaterial" id=3]
render_priority = 1
shader = SubResource( 4 )

[node name="Pick-A-Dot" type="Panel"]
margin_right = 300.0
margin_bottom = 450.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.0
margin_bottom = -198.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 302.0
margin_bottom = 235.0
rect_min_size = Vector2( 0, 235 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SV" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
material = SubResource( 2 )
margin_right = 265.0
margin_bottom = 235.0
rect_min_size = Vector2( 265, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
material = SubResource( 3 )
margin_left = 270.0
margin_right = 300.0
margin_bottom = 235.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 302.0
margin_bottom = 275.0

[node name="Preview" type="ColorRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 258.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3

[node name="Transparent" type="TextureButton" parent="VBoxContainer/HBoxContainer2/Preview"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picker" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 262.0
margin_right = 302.0
margin_bottom = 35.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="R" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 302.0
margin_bottom = 304.0

[node name="Label" type="Label" parent="VBoxContainer/R"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = "R"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/R"]
margin_left = 12.0
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="VBoxContainer/R/CenterContainer"]
margin_left = 1.0
margin_top = 4.0
margin_right = 211.0
margin_bottom = 20.0
rect_min_size = Vector2( 210, 0 )
size_flags_horizontal = 3
max_value = 255.0
value = 255.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/R"]
margin_left = 228.0
margin_right = 302.0
margin_bottom = 24.0
max_value = 255.0
value = 255.0

[node name="G" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 309.0
margin_right = 302.0
margin_bottom = 333.0

[node name="Label" type="Label" parent="VBoxContainer/G"]
margin_top = 5.0
margin_right = 10.0
margin_bottom = 19.0
text = "G"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/G"]
margin_left = 14.0
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="VBoxContainer/G/CenterContainer"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 20.0
rect_min_size = Vector2( 210, 0 )
size_flags_horizontal = 3
max_value = 255.0
value = 255.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/G"]
margin_left = 228.0
margin_right = 302.0
margin_bottom = 24.0
max_value = 255.0
value = 255.0

[node name="B" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 302.0
margin_bottom = 362.0

[node name="Label" type="Label" parent="VBoxContainer/B"]
margin_top = 5.0
margin_right = 9.0
margin_bottom = 19.0
text = "B"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/B"]
margin_left = 13.0
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="VBoxContainer/B/CenterContainer"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 20.0
rect_min_size = Vector2( 210, 0 )
size_flags_horizontal = 3
max_value = 255.0
value = 255.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/B"]
margin_left = 228.0
margin_right = 302.0
margin_bottom = 24.0
max_value = 255.0
value = 255.0

[node name="A" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 367.0
margin_right = 302.0
margin_bottom = 391.0

[node name="Label" type="Label" parent="VBoxContainer/A"]
margin_top = 5.0
margin_right = 9.0
margin_bottom = 19.0
text = "A"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/A"]
margin_left = 13.0
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="VBoxContainer/A/CenterContainer"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 20.0
rect_min_size = Vector2( 210, 0 )
size_flags_horizontal = 3
max_value = 255.0
value = 255.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/A"]
margin_left = 228.0
margin_right = 302.0
margin_bottom = 24.0
max_value = 255.0
value = 255.0

[node name="CanvasLayer" type="CanvasLayer" parent="VBoxContainer"]

[connection signal="gui_input" from="VBoxContainer/HBoxContainer/SV" to="." method="_on_SV_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/H" to="." method="_on_H_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Picker" to="." method="_on_Picker_pressed"]
[connection signal="value_changed" from="VBoxContainer/R/CenterContainer/HSlider" to="." method="r_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/R/SpinBox" to="." method="r_value_changed"]
[connection signal="value_changed" from="VBoxContainer/G/CenterContainer/HSlider" to="." method="g_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/G/SpinBox" to="." method="g_value_changed"]
[connection signal="value_changed" from="VBoxContainer/B/CenterContainer/HSlider" to="." method="b_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/B/SpinBox" to="." method="b_value_changed"]
[connection signal="value_changed" from="VBoxContainer/A/CenterContainer/HSlider" to="." method="a_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/A/SpinBox" to="." method="a_value_changed"]
